--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -36,11 +36,11 @@
 			<version>3.3.1</version>
 		</dependency>
 
-		<dependency>
-			<groupId>asm</groupId>
-			<artifactId>asm-util</artifactId>
-			<version>3.3.1</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>asm</groupId> -->
+<!-- 			<artifactId>asm-util</artifactId> -->
+<!-- 			<version>3.3.1</version> -->
+<!-- 		</dependency> -->
 
 		<!-- <groupId>asm</groupId> -->
 		<!-- <artifactId>asm-analysis</artifactId> -->
