--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>net.minidev</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.0</version>
+		<version>2.0-RC1</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
@@ -33,7 +33,6 @@
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>asm</artifactId>
-			<version>1.0</version>
 		</dependency>
 	</dependencies>
 </project>
