--- a/asm/pom.xml
+++ b/asm/pom.xml
@@ -5,12 +5,12 @@
 
 	<artifactId>asm</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-RC3</version>
+	<version>1.0</version>
 
 	<parent>
 		<groupId>net.minidev</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.0-RC3</version>
+		<version>2.0</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
