--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -108,10 +108,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.8</version>
+<!-- ONLY NEEDED With jdk 1.7+ -->
+<!--
 				<configuration>
 					<failOnError>false</failOnError>
 					<additionalparam>-Xdoclint:none</additionalparam>
 				</configuration>
+-->
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -129,12 +132,6 @@
 		<connection>scm:git:https://github.com/netplex/json-smart-v2.git</connection>
 		<developerConnection>scm:git:https://github.com/netplex/json-smart-v2.git</developerConnection>
 		<url>https://github.com/netplex/json-smart-v2</url>
-
-<!--
-		<connection>scm:git:https://code.google.com/p/json-smart.v2/</connection>
-		<developerConnection>scm:git:https://code.google.com/p/json-smart.v2/</developerConnection>
-		<url>http://code.google.com/p/json-smart.v2/source/browse</url>
--->
 	</scm>
 
 	<reporting>
