OSGi support for json-smart. Fixes issue #2.

--- a/asm/pom.xml
+++ b/asm/pom.xml
@@ -4,8 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>asm</artifactId>
-	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.0.1</version>
 
 	<parent>
 		<groupId>net.minidev</groupId>
@@ -55,4 +54,25 @@
 <!-- 			<version>3.3.1</version> -->
 <!-- 		</dependency> -->
 	</dependencies>
+	<packaging>bundle</packaging>
+	<build>
+	  <plugins>
+           <plugin>
+              <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.3.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                  <instructions>
+                     <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+                     <Bundle-Name>${project.artifactId}</Bundle-Name>
+                     <Bundle-Version>${project.version}</Bundle-Version>
+                     <Export-Package>net.minidev.asm,net.minidev.asm.ex</Export-Package>
+                     <!-- Private-Package></Private-Package-->
+                     <Embed-Dependency>asm;groupId=asm;inline=true</Embed-Dependency>
+                  </instructions>
+                </configuration>
+              </plugin>
+	  </plugins>
+	</build>
 </project>
