--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -34,4 +34,25 @@
 			<artifactId>asm</artifactId>
 		</dependency>
 	</dependencies>
+	<build>
+	  <plugins>
+           <plugin>
+              <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.3.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                  <instructions>
+                     <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+                     <Bundle-Name>${project.artifactId}</Bundle-Name>
+                     <Bundle-Version>${project.version}</Bundle-Version>
+                     <Export-Package>net.minidev.json,net.minidev.json.annotate,net.minidev.json.mapper,net.minidev.json.parser,net.minidev.json.serialiser</Export-Package>
+                     <!-- Private-Package></Private-Package-->
+                  </instructions>
+                </configuration>
+              </plugin>
+	  </plugins>
+	</build>
+	<packaging>bundle</packaging>
+	<version>2.0.1</version>
 </project>
