--- a/asm/pom.xml
+++ b/asm/pom.xml
@@ -4,13 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>asm</artifactId>
-	<packaging>jar</packaging>
-	<version>1.0</version>
+	<packaging>bundle</packaging>
+	<version>1.0.1</version>
 
 	<parent>
 		<groupId>net.minidev</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.0</version>
+		<version>2.0.1</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
@@ -30,29 +30,30 @@
 			<artifactId>asm</artifactId>
 			<version>3.3.1</version>
 		</dependency>
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>asm</groupId> -->
-<!-- 			<artifactId>asm-util</artifactId> -->
-<!-- 			<version>3.3.1</version> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>asm</groupId> -->
-<!-- 			<artifactId>asm-analysis</artifactId> -->
-<!-- 			<version>3.3.1</version> -->
-<!-- 		</dependency> -->
-		
-<!-- 		<dependency> -->
-<!-- 			<groupId>asm</groupId> -->
-<!-- 			<artifactId>asm-commons</artifactId> -->
-<!-- 			<version>3.3.1</version> -->
-<!-- 		</dependency> -->
-		
-<!-- 		<dependency> -->
-<!-- 			<groupId>asm</groupId> -->
-<!-- 			<artifactId>asm-tree</artifactId> -->
-<!-- 			<version>3.3.1</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>asm</groupId> -->
+		<!-- <artifactId>asm-util</artifactId> -->
+		<!-- <version>3.3.1</version> -->
+		<!-- </dependency> -->
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.3.7</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+						<Bundle-Name>${project.artifactId}</Bundle-Name>
+						<Bundle-Version>${project.version}</Bundle-Version>
+						<Export-Package>net.minidev.asm,net.minidev.asm.ex</Export-Package>
+						<!-- Private-Package></Private-Package -->
+						<Embed-Dependency>asm;groupId=asm;inline=true</Embed-Dependency>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
