--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.minidev</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.0.1</version>
+	<version>2.0</version>
 	<name>Minidev super pom</name>
 	<description>minidev common properties.</description>
 	<packaging>pom</packaging>
@@ -48,12 +48,12 @@
 
 	<build>
 		<plugins>
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.felix</groupId> -->
-<!-- 				<artifactId>maven-bundle-plugin</artifactId> -->
-<!-- 				<extensions>true</extensions> -->
-<!-- 				<version>2.3.7</version> -->
-<!-- 			</plugin> -->
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<version>2.3.7</version>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -275,7 +275,7 @@ https://oss.sonatype.org/content/repositories/snapshots
 			<dependency>
 				<groupId>net.minidev</groupId>
 				<artifactId>asm</artifactId>
-				<version>1.0.1</version>
+				<version>1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>net.minidev</groupId>
