--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -4,6 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>json-smart</artifactId>
 	<packaging>bundle</packaging>
+	<version>2.1.1</version>
 
 	<parent>
 		<groupId>net.minidev</groupId>
