--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.minidev</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.1.0</version>
+	<version>2.1.1</version>
 	<name>Minidev super pom</name>
 	<description>minidev common properties.</description>
 	<packaging>pom</packaging>
@@ -272,8 +272,8 @@ https://oss.sonatype.org/content/repositories/snapshots
 			</dependency>
 			<dependency>
 				<groupId>net.minidev</groupId>
-				<artifactId>asm</artifactId>
-				<version>1.0.2</version>
+				<artifactId>accessors-smart</artifactId>
+				<version>1.0.3</version>
 			</dependency>
 			<dependency>
 				<groupId>net.minidev</groupId>
