--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -7,7 +7,7 @@
 <!-- 	<version>2.1.1</version> -->
 	<parent>
 		<groupId>net.minidev</groupId>
-		<artifactId>parent</artifactId>
+		<artifactId>minidev-parent</artifactId>
 		<version>2.1.1</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
