--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -190,7 +190,8 @@ https://oss.sonatype.org/content/repositories/snapshots
 				</property>
 			</activation>
 			<properties>
-				<gpg.keyname>2C8DF6EC</gpg.keyname>
+				<gpg.keyname>8E322ED0</gpg.keyname>
+				<!-- 2C8DF6EC Loosed Key -->
 				<!-- <gpg.keyname>Uriel Chemouni (dev) <uchemouni@gmail.com></gpg.keyname> -->
 				<!-- GPG Key ID to use for signing -->
 			</properties>
