--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -48,12 +48,12 @@
 
 	<build>
 		<plugins>
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.felix</groupId> -->
-<!-- 				<artifactId>maven-bundle-plugin</artifactId> -->
-<!-- 				<extensions>true</extensions> -->
-<!-- 				<version>2.3.7</version> -->
-<!-- 			</plugin> -->
+			<!-- <plugin> -->
+			<!-- <groupId>org.apache.felix</groupId> -->
+			<!-- <artifactId>maven-bundle-plugin</artifactId> -->
+			<!-- <extensions>true</extensions> -->
+			<!-- <version>2.3.7</version> -->
+			<!-- </plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -108,7 +108,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.10.1</version>
-<!-- ONLY NEEDED With jdk 1.7+ -->
+				<!-- ONLY NEEDED With jdk 1.7+ -->
 				<configuration>
 					<failOnError>false</failOnError>
 					<additionalparam>-Xdoclint:none</additionalparam>
@@ -162,20 +162,16 @@
 	</modules>
 
 	<distributionManagement>
-		<!-- My project's Sonatype repository to be used by the release plugin -->
 		<repository>
 			<id>sonatype-nexus-staging</id>
 			<name>Nexus Release Repository</name>
-			<url>
-http://oss.sonatype.org/service/local/staging/deploy/maven2
-</url>
+			<url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
 		</repository>
+		
 		<snapshotRepository>
 			<id>sonatype-nexus-snapshots</id>
 			<name>My Nexus Snapshots Repository</name>
-			<url>
-https://oss.sonatype.org/content/repositories/snapshots
-</url>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
