--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -9,12 +9,6 @@
 	<packaging>pom</packaging>
 	<url>http://www.minidev.net/</url>
 
-	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
-	</parent>
-
 	<organization>
 		<name>Chemouni Uriel</name>
 		<url>http://www.minidev.net/</url>
@@ -48,21 +42,27 @@
 
 	<build>
 		<plugins>
-			<!-- <plugin> -->
-			<!-- <groupId>org.apache.felix</groupId> -->
-			<!-- <artifactId>maven-bundle-plugin</artifactId> -->
-			<!-- <extensions>true</extensions> -->
-			<!-- <version>2.3.7</version> -->
-			<!-- </plugin> -->
-			<plugin>
+			<plugin> <!-- updated on 29/07/2015 -->
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.3</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
+
+			<plugin> <!-- updated on 29/07/2015 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.2</version>
+				<version>2.4</version>
 				<executions>
 					<execution>
 						<id>bind-sources</id>
 						<goals>
-							<goal>jar</goal>
+							<goal>jar-no-fork</goal>
 						</goals>
 					</execution>
 				</executions>
@@ -104,10 +104,10 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
+			<plugin> <!-- updated on 29/07/2015 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.1</version>
+				<version>2.10.3</version>
 				<!-- ONLY NEEDED With jdk 1.7+ -->
 				<configuration>
 					<failOnError>false</failOnError>
@@ -162,15 +162,8 @@
 	</modules>
 
 	<distributionManagement>
-		<repository>
-			<id>sonatype-nexus-staging</id>
-			<name>Nexus Release Repository</name>
-			<url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-		</repository>
-		
 		<snapshotRepository>
-			<id>sonatype-nexus-snapshots</id>
-			<name>My Nexus Snapshots Repository</name>
+			<id>ossrh</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
@@ -204,11 +197,11 @@
 						- -sign - -detach-sign -a target/dbunit-embeddedderby-parenttest.jar Note: 
 						"mvn gpg:sign" results in NPE with v 1.o-a.-4, use "mvn package gpg:sign" 
 						instead; see the issue MGPG-18 -->
-					<plugin>
+					<plugin> <!-- updated on 29/07/2015 -->
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<!-- <version>1.0-alpha-4</version> -->
-						<version>1.2</version>
+
+						<version>1.6</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
@@ -239,7 +232,13 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-release-plugin</artifactId>
-						<version>2.1</version>
+						<version>2.5.2</version>
+						<configuration>
+							<autoVersionSubmodules>false</autoVersionSubmodules>
+							<useReleaseProfile>false</useReleaseProfile>
+							<releaseProfiles>release</releaseProfiles>
+							<goals>deploy</goals>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
