--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -42,7 +42,8 @@
 
 	<build>
 		<plugins>
-			<plugin> <!-- updated on 29/07/2015 -->
+		<!--
+			<plugin>  updated on 29/07/2015 
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
 				<version>1.6.3</version>
@@ -53,7 +54,7 @@
 					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
-
+		-->
 			<plugin> <!-- updated on 29/07/2015 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -166,6 +167,16 @@
 			<id>ossrh</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+ <!-- 
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+-->
 	</distributionManagement>
 
 	<profiles>
@@ -234,6 +245,8 @@
 						<artifactId>maven-release-plugin</artifactId>
 						<version>2.5.2</version>
 						<configuration>
+						    <mavenExecutorId>forked-path</mavenExecutorId>
+    						<arguments>-Psonatype-oss-release</arguments>
 							<autoVersionSubmodules>false</autoVersionSubmodules>
 							<useReleaseProfile>false</useReleaseProfile>
 							<releaseProfiles>release</releaseProfiles>
