--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -69,10 +69,10 @@
 				</executions>
 			</plugin>
 
-			<plugin>
+			<plugin> <!-- updated on 29/10/2015 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.3</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 					<source>1.6</source>
@@ -84,19 +84,19 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
+			<plugin> <!-- updated on 29/10/2015 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.5</version>
+				<version>2.7</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 
-			<plugin>
+			<plugin> <!-- updated on 29/10/2015 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.1</version>
+				<version>2.6</version>
 				<configuration>
 					<excludes>
 						<exclude>**/.svn/*</exclude>
@@ -135,12 +135,12 @@
 
 	<reporting>
 		<plugins>
-			<plugin>
+			<plugin> <!-- updated on 29/10/2015 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.6</version>
+				<version>2.17</version>
 				<configuration>
-					<configLocation>config/sun_checks.xml</configLocation>
+					<configLocation>google_checks.xml</configLocation>
 				</configuration>
 			</plugin>
 		</plugins>
