--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -95,7 +95,7 @@
             	<!-- My old Is back -->
                 <gpg.keyname>2C8DF6EC</gpg.keyname>
                 <!-- <gpg.keyname>8E322ED0</gpg.keyname> -->
-                <!-- <gpg.keyname>Uriel Chemouni (dev) <uchemouni@gmail.com></gpg.keyname> -->
+                <!-- <gpg.keyname>Uriel Chemouni (dev) uchemouni@gmail.com</gpg.keyname> -->
                 <!-- GPG Key ID to use for signing -->
             </properties>
             <build>
