--- a/json-smart-action/pom.xml
+++ b/json-smart-action/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.minidev</groupId>
 		<artifactId>minidev-parent</artifactId>
-		<version>2.2.1-b-SNAPSHOT</version>
+		<version>2.3-SNAPSHOT</version>
 	</parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>json-smart-action</artifactId>
@@ -22,7 +22,7 @@
             <id>uriel</id>
             <name>Uriel Chemouni</name>
             <email>uchemouni@gmail.com</email>
-            <timezone>GMT+1</timezone>
+            <timezone>GMT-7</timezone>
             <roles>
             </roles>
         </developer>
