--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.minidev</groupId>
 		<artifactId>minidev-parent</artifactId>
-		<version>2.2.1-b-SNAPSHOT</version>
+		<version>2.3-SNAPSHOT</version>
 	</parent>
 	<!-- this POM is released under an Apache 2.0 license -->
 	<modelVersion>4.0.0</modelVersion>
@@ -23,7 +23,7 @@
 			<id>uriel</id>
 			<name>Uriel Chemouni</name>
 			<email>uchemouni@gmail.com</email>
-			<timezone>GMT+1</timezone>
+			<timezone>GMT-7</timezone>
 			<roles>
 			</roles>
 		</developer>
