--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -56,6 +56,7 @@
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>accessors-smart</artifactId>
+            <version>1.2</version>
 		</dependency>
 	</dependencies>
 	<scm>
