--- a/json-smart-action/pom.xml
+++ b/json-smart-action/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.minidev</groupId>
 		<artifactId>minidev-parent</artifactId>
-		<version>2.3</version>
+		<version>2.3-SNAPSHOOT</version>
 	</parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>json-smart-action</artifactId>
