--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.minidev</groupId>
 		<artifactId>minidev-parent</artifactId>
-		<version>2.4</version>
+		<version>2.4.1</version>
 	</parent>
 	<!-- this POM is released under an Apache 2.0 license -->
 	<modelVersion>4.0.0</modelVersion>
@@ -49,9 +49,9 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter-api</artifactId>
+    		<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.minidev</groupId>
