upgrade to junit 5 in progress

--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,12 @@
     			<version>5.7.1</version>
     			<scope>test</scope>
 			</dependency>
+			<dependency>
+    			<groupId>org.junit.jupiter</groupId>
+    			<artifactId>junit-jupiter-params</artifactId>
+    			<version>5.7.1</version>
+    			<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
