--- a/json-smart-action/pom.xml
+++ b/json-smart-action/pom.xml
@@ -52,6 +52,11 @@
     		<artifactId>junit-jupiter-api</artifactId>
     		<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter-params</artifactId>
+    		<scope>test</scope>
+		</dependency>
         <dependency>
             <groupId>net.minidev</groupId>
             <artifactId>json-smart</artifactId>
