--- a/json-smart-action/pom.xml
+++ b/json-smart-action/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>json-smart-action</artifactId>
-    <name>JSON Small and Fast Parser</name>
+    <name>JSON-smart-action Small and Fast Parser</name>
     <description>
         JSON (JavaScript Object Notation) is a lightweight data-interchange format. It is easy for humans to read and write. It is easy for machines to parse and generate. It is based on a subset of the JavaScript Programming Language, Standard ECMA-262 3rd Edition - December 1999. JSON is a text format that is completely language independent but uses conventions that are familiar to programmers of the C-family of languages, including C, C++, C#, Java, JavaScript, Perl, Python, and many others. These properties make JSON an ideal data-interchange language.
     </description>
