--- a/json-smart-action/pom.xml
+++ b/json-smart-action/pom.xml
@@ -12,10 +12,10 @@
         JSON (JavaScript Object Notation) is a lightweight data-interchange format. It is easy for humans to read and write. It is easy for machines to parse and generate. It is based on a subset of the JavaScript Programming Language, Standard ECMA-262 3rd Edition - December 1999. JSON is a text format that is completely language independent but uses conventions that are familiar to programmers of the C-family of languages, including C, C++, C#, Java, JavaScript, Perl, Python, and many others. These properties make JSON an ideal data-interchange language.
     </description>
     <packaging>bundle</packaging>
-    <url>http://www.minidev.net/</url>
+    <url>https://urielch.github.io/</url>
     <organization>
         <name>Chemouni Uriel</name>
-        <url>http://www.minidev.net/</url>
+        <url>https://urielch.github.io/</url>
     </organization>
     <developers>
         <developer>
