--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
 	<name>Minidev super pom</name>
 	<description>minidev common properties.</description>
 	<packaging>pom</packaging>
-	<url>http://www.minidev.net/</url>
+	<url>https://urielch.github.io/</url>
 
 	<organization>
 		<name>Chemouni Uriel</name>
-		<url>http://www.minidev.net/</url>
+		<url>https://urielch.github.io/</url>
 	</organization>
 
 	<developers>
@@ -45,7 +45,7 @@
 			<plugin> <!-- updated on 29/07/2015 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
+				<version>3.2.1</version>
 				<executions>
 					<execution>
 						<id>bind-sources</id>
