change timezone + change accessors-smart version

--- a/json-smart-action/pom.xml
+++ b/json-smart-action/pom.xml
@@ -22,7 +22,7 @@
             <id>uriel</id>
             <name>Uriel Chemouni</name>
             <email>uchemouni@gmail.com</email>
-            <timezone>GMT-7</timezone>
+            <timezone>GMT+3</timezone>
             <roles>
             </roles>
         </developer>
