--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -23,7 +23,7 @@
 			<id>uriel</id>
 			<name>Uriel Chemouni</name>
 			<email>uchemouni@gmail.com</email>
-			<timezone>GMT-7</timezone>
+			<timezone>GMT+3</timezone>
 			<roles>
 			</roles>
 		</developer>
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>accessors-smart</artifactId>
-            <version>1.3</version>
+            <version>2.4.1</version>
 		</dependency>
 	</dependencies>
 	<scm>
