--- a/json-smart-action/pom.xml
+++ b/json-smart-action/pom.xml
@@ -38,7 +38,6 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
     <scm>
         <connection>scm:git:https://github.com/netplex/json-smart-v2.git</connection>
         <developerConnection>scm:git:https://github.com/netplex/json-smart-v2.git</developerConnection>
@@ -73,7 +72,6 @@
             <build>
                 <plugins>
                     <plugin>
-                        <!-- updated on 29/07/2015 -->
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
                         <version>1.6</version>
@@ -91,6 +89,10 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
+						<version>3.2.0</version>
+						<configuration>
+                          <source>8</source>
+                		</configuration>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -104,7 +106,7 @@
 						tag, deploy) to try: mvn release:prepare -DdryRun=true && mvn release:clean 
 						to perform: mvn release:prepare release:perform Read http://nexus.sonatype.org/oss-repository-hosting.html#3 
 						for instructions on releasing to this project's Sonatype repository -->
-                    <plugin> <!-- updated on 04/04/2021 -->
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
                         <version>3.0.0-M1</version>
@@ -174,12 +176,13 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
             </plugin>
-            <plugin> <!-- updated on 04/04/2021 -->
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.2.0</version>
                 <!-- ONLY NEEDED With jdk 1.7+ -->
                 <configuration>
+                    <source>8</source>
                     <failOnError>false</failOnError>
                     <!-- <additionalparam>-Xdoclint:none</additionalparam> -->
                 </configuration>
@@ -203,7 +206,10 @@
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Export-Package>
-                            net.minidev.json, net.minidev.json.annotate, net.minidev.json.parser, net.minidev.json.reader, net.minidev.json.writer
+                            net.minidev.json.actions,
+                            net.minidev.json.actions.navigate,
+                            net.minidev.json.actions.path,
+                            net.minidev.json.actions.traverse
                         </Export-Package>
                     </instructions>
                 </configuration>
@@ -211,18 +217,21 @@
         </plugins>
     </build>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
     		<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-api</artifactId>
             <version>5.7.1</version>
     		<scope>test</scope>
 		</dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
 		<dependency>
     		<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-params</artifactId>
             <version>5.7.1</version>
     		<scope>test</scope>
 		</dependency>
+        <!-- https://mvnrepository.com/artifact/net.minidev/json-smart -->
         <dependency>
             <groupId>net.minidev</groupId>
             <artifactId>json-smart</artifactId>
