--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -39,7 +39,6 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<scm>
-		<!-- ON GIT HUB -->
 		<connection>scm:git:https://github.com/netplex/json-smart-v2.git</connection>
 		<developerConnection>scm:git:https://github.com/netplex/json-smart-v2.git</developerConnection>
 		<url>https://github.com/netplex/json-smart-v2</url>
@@ -73,7 +72,6 @@
 			<build>
 				<plugins>
 					<plugin>
-						<!-- updated on 29/07/2015 -->
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
 						<version>1.6</version>
@@ -89,10 +87,12 @@
 					</plugin>
 					<!-- Publish also javadocs when releasing - required by Sonatype -->
 					<plugin>
-						<!-- updated on 17/04/2021 -->
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>3.2.0</version>
+						<configuration>
+                          <source>8</source>
+                		</configuration>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
@@ -182,6 +182,7 @@
 				<version>3.2.0</version>
 				<!-- ONLY NEEDED With jdk 1.7+ -->
 				<configuration>
+                    <source>8</source>
 					<failOnError>false</failOnError>
 					<!-- <additionalparam>-Xdoclint:none</additionalparam> -->
 				</configuration>
@@ -195,10 +196,9 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<!-- updated on 17/04/2021 -->
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-                <version>5.1.2</version> <!-- 3.0.0 need java 7+ -->
+                <version>5.1.2</version>
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
@@ -224,12 +224,14 @@
 			<version>5.7.1</version>
     		<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
 		<dependency>
     		<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-params</artifactId>
             <version>5.7.1</version>
     		<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.minidev/accessors-smart -->
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>accessors-smart</artifactId>
