--- a/accessors-smart/pom.xml
+++ b/accessors-smart/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.minidev</groupId>
     <artifactId>accessors-smart</artifactId>
-    <version>2.4.7</version>
+    <version>2.4.8</version>
     <name>ASM based accessors helper used by json-smart</name>
     <description>Java reflect give poor performance on getter setter an constructor calls, accessors-smart use ASM to speed up those calls.</description>
     <packaging>bundle</packaging>
@@ -18,12 +18,12 @@
             <email>uchemouni@gmail.com</email>
             <timezone>GMT+3</timezone>
         </developer>
-
-
-
-
-
-
+        <developer>
+            <id>Shoothzj</id>
+            <name>ZhangJian He</name>
+            <email>shoothzj@gmail.com</email>
+            <timezone>GMT+8</timezone>
+        </developer>
     </developers>
     <licenses>
         <license>
