--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
     <groupId>net.minidev</groupId>
 	<artifactId>json-smart</artifactId>
-	<version>2.4.7</version>
+	<version>2.4.8</version>
 	<name>JSON Small and Fast Parser</name>
 	<description>JSON (JavaScript Object Notation) is a lightweight data-interchange format. It is easy for humans to read and write. It is easy for machines to parse and generate. It is based on a subset of the JavaScript Programming Language, Standard ECMA-262 3rd Edition - December 1999. JSON is a text format that is completely language independent but uses conventions that are familiar to programmers of the C-family of languages, including C, C++, C#, Java, JavaScript, Perl, Python, and many others. These properties make JSON an ideal data-interchange language.</description>
 	<packaging>bundle</packaging>
@@ -23,6 +23,12 @@
 			<name>Eitan Raviv</name>
 			<email>adoneitan@gmail.com</email>
 			<timezone>GMT+2</timezone>
+		</developer>
+		<developer>
+			<id>Shoothzj</id>
+			<name>ZhangJian He</name>
+			<email>shoothzj@gmail.com</email>
+			<timezone>GMT+8</timezone>
 		</developer>
 	</developers>
 	<licenses>
@@ -235,7 +241,7 @@
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>accessors-smart</artifactId>
-            <version>2.4.7</version>
+            <version>2.4.8</version>
 		</dependency>
 	</dependencies>
 </project>
