--- a/.github/workflows/json-smart-unit-tests.yml
+++ b/.github/workflows/json-smart-unit-tests.yml
@@ -17,7 +17,11 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+      - name: unit tests accessors-smart
+        run: cd accessors-smart; mvn -B install; mvn -B clean test
+          
       - name: unit tests json-smart-action
-        run: cd json-smart-action; mvn -B install; mvn -B clean test
+        run: cd ../json-smart-action; mvn -B install; mvn -B clean test
+
       - name: unit tests json-smart
         run: cd ../json-smart; mvn -B clean test
