chore: Update github id from Shoothzj to shoothzj
Signed-off-by: ZhangJian He <shoothzj@gmail.com>

--- a/accessors-smart/pom.xml
+++ b/accessors-smart/pom.xml
@@ -34,7 +34,7 @@ limitations under the License.
             <timezone>GMT+3</timezone>
         </developer>
         <developer>
-            <id>Shoothzj</id>
+            <id>shoothzj</id>
             <name>ZhangJian He</name>
             <email>shoothzj@gmail.com</email>
             <timezone>GMT+8</timezone>
