--- a/json-smart-action/pom.xml
+++ b/json-smart-action/pom.xml
@@ -25,7 +25,7 @@
             <timezone>GMT+2</timezone>
         </developer>
         <developer>
-            <id>Shoothzj</id>
+            <id>shoothzj</id>
             <name>ZhangJian He</name>
             <email>shoothzj@gmail.com</email>
             <timezone>GMT+8</timezone>
