--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -40,7 +40,7 @@ limitations under the License.
 			<timezone>GMT+2</timezone>
 		</developer>
 		<developer>
-			<id>Shoothzj</id>
+			<id>shoothzj</id>
 			<name>ZhangJian He</name>
 			<email>shoothzj@gmail.com</email>
 			<timezone>GMT+8</timezone>
