chore: change dependabot interval from daily to monthly

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,8 +3,8 @@ updates:
   - package-ecosystem: "maven"
     directory: "json-smart"
     schedule:
-      interval: "daily"
+      interval: "monthly"
   - package-ecosystem: "maven"
     directory: "json-smart-action"
     schedule:
-      interval: "daily"
+      interval: "monthly"
