update maintainer github id and email
Signed-off-by: Zhangjian He <hezhangjian97@gmail.com>

--- a/json-smart/pom.xml
+++ b/json-smart/pom.xml
@@ -40,9 +40,9 @@ limitations under the License.
 			<timezone>GMT+2</timezone>
 		</developer>
 		<developer>
-			<id>shoothzj</id>
-			<name>ZhangJian He</name>
-			<email>shoothzj@gmail.com</email>
+			<id>hezhangjian</id>
+			<name>Zhangjian He</name>
+			<email>hezhangjian97gmail.com</email>
 			<timezone>GMT+8</timezone>
 		</developer>
 	</developers>
