--- a/accessors-smart/pom.xml
+++ b/accessors-smart/pom.xml
@@ -34,9 +34,9 @@ limitations under the License.
             <timezone>GMT+1</timezone>
         </developer>
         <developer>
-            <id>shoothzj</id>
-            <name>ZhangJian He</name>
-            <email>shoothzj@gmail.com</email>
+            <id>hezhangjian</id>
+            <name>Zhangjian He</name>
+            <email>hezhangjian97gmail.com</email>
             <timezone>GMT+8</timezone>
         </developer>
     </developers>
