--- a/json-smart-action/pom.xml
+++ b/json-smart-action/pom.xml
@@ -25,9 +25,9 @@
             <timezone>GMT+2</timezone>
         </developer>
         <developer>
-            <id>shoothzj</id>
-            <name>ZhangJian He</name>
-            <email>shoothzj@gmail.com</email>
+            <id>hezhangjian</id>
+            <name>Zhangjian He</name>
+            <email>hezhangjian97gmail.com</email>
             <timezone>GMT+8</timezone>
         </developer>
     </developers>
