--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -3,8 +3,18 @@ name: Security Scanning
 on:
   push:
     branches: [ master, upgrade ]
+    paths:
+      - 'accessors-smart/**'
+      - 'json-smart/**'
+      - 'json-smart-action/**'
+      - '.github/workflows/security.yml'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'accessors-smart/**'
+      - 'json-smart/**'
+      - 'json-smart-action/**'
+      - '.github/workflows/security.yml'
   schedule:
     - cron: '0 6 * * 1'  # Weekly on Monday at 6am UTC
 
